# destroy_me

./: README.md  pose.py
dual_moveit/: .setup_assistant  CMakeLists.txt  package.xml
dual_moveit/config/: dual.ros2_control.xacro  dual.srdf  dual.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
dual_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
interpolator/: CMakeLists.txt  package.xml
interpolator/include/: FIRFilter.hpp  Spline.hpp
interpolator/src/: ur_c_spline.cpp
interpolator/src/interpolator/: FIRFilter.cpp  Spline.cpp
message/: CMakeLists.txt  package.xml
message/action/: CommandRobotiqGripper.action
message/srv/: CablePos.srv  Interpolate.srv  JointInterpolate.srv  UrForwardKinematics.srv  UrInverseKinematics.srv
model/: CMakeLists.txt  package.xml
model/objects/2d_camera/: camera_model.sdf  model.config
model/objects/cable_model/: cable_model.sdf  model.config
model/urdf/: camera.urdf.xacro
point_cloud_op/: CMakeLists.txt  package.xml  test_pcd.pcd
point_cloud_op/include/: point_cloud_op.hpp
point_cloud_op/src/: Main.cpp
point_cloud_op/src/point_cloud_op/: point_cloud_op.cpp
prova_config/: .setup_assistant  CMakeLists.txt  package.xml
prova_config/config/: dual.ros2_control.xacro  dual.srdf  dual.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
prova_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: dd.py  deployment.py  gripper_pub.py  interpolator.py  kin_client.py  point_cloud_scene.py  servo_pub.py
robotiq_control/: package.xml  setup.cfg  setup.py
robotiq_control/robotiq_control/: GripperActSrvTcp_Ip.py  GripperSocket.py
robotiq_hand_e/: CMakeLists.txt  package.xml
robotiq_hand_e/config/: robotiq_controller.yaml
robotiq_hand_e/launch/: robotiq_action_server.launch.py
robotiq_hand_e/meshes/: finger_left.STL  finger_right.STL  hand_e_finger.STL  prova.ply  wiring_gripper.stl
robotiq_hand_e/polygon_meshes/: hand_e_finger_left_.ply  hand_e_finger_right_.ply  wiring_gripper.ply
robotiq_hand_e/urdf/: robotiq_trasmission.xacro  robotiq_wiring.urdf.xacro
ur/: CMakeLists.txt  package.xml
ur/config/: arm_controller.yaml  cable_controller.yaml  initial_positions_left.yaml  initial_positions_right.yaml  physical_parameters_left.yaml  physical_parameters_right.yaml  robot_calibration_left.yaml  robot_calibration_right.yaml  ur_servo_left.yaml  ur_servo_right.yaml
ur/launch/: dual_env.launch.py  gazebo.launch.py  one_arm.launch.py  prove.launch.py  spawn_robot.launch.py  ss.launch.py  ur_control.launch.py  world.launch.py
ur/params/: robot_chain.yaml
ur/rviz/: rviz.rviz  rviz_config.rviz
ur/xacro/: dual_env.urdf.xacro  single_env.urdf.xacro  ur_gripper.urdf.xacro
ur_kinematics/: CMakeLists.txt  package.xml
ur_kinematics/include/: ik_ur.hpp
ur_kinematics/src/: ur_kinematics.cpp
ur_kinematics/src/ur_kinematics/: ik_ur.cpp
