<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>point_cloud_op</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michela._cavuoto@libero.it">lar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <build_depend>pcl_conversion</build_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>message</exec_depend>
  <exec_depend>robotiq_hand_e</exec_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>pluginlib</depend>
  <depend>filters</depend>
  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_occupancy_map_monitor</depend>
  <depend>moveit_ros_planning</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
