<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lar@todo.todo">lar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>xacro</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robotiq_hand_e</exec_depend>
  <exec_depend>model</exec_depend>
  <exec_depend>dlo_model_gazebo</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
